--- a/stylish.html
+++ b/stylish.html
@@ -2,10 +2,16 @@
 <html>
 <head>
 	<title>Stylish</title>
+	<style type="text/css">
+		h1{color:red;
+			font-size:90px;}
+			h2{color:blue;
+				font-size:45px;}
+	</style>
 </head>
 <body>
 
-<h1 style="color:red; font-size: 90px;">Heading 1 - 1</h1>
+<h1>Heading 1 - 1</h1>
 <h1>Heading 1 - 2</h1>
 <h1>Heading 1 - 3</h1>
 <h2>Heading 2 - 1</h2>
