--- a/stylish.html
+++ b/stylish.html
@@ -2,20 +2,17 @@
 <html>
 <head>
 	<title>Stylish</title>
-	<style type="text/css">
-		h1{color:red;
-			font-size:90px;}
-			h2{color:blue;
-				font-size:45px;}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/test.css">
 </head>
 <body>
 
-<h1>Heading 1 - 1</h1>
+<!--id=one element-->
+
+<h1 id="first" class="small">Heading 1 - 1</h1>
 <h1>Heading 1 - 2</h1>
-<h1>Heading 1 - 3</h1>
+<h1 class="small">Heading 1 - 3</h1>
 <h2>Heading 2 - 1</h2>
-<h2>Heading 2 - 2</h2>
+<h2 class="small">Heading 2 - 2</h2>
 <h2>Heading 2 - 3</h2>
 </body>
 </html>
